syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "nem";
option java_outer_classname = "EntityVersionTypeEntityConfig";

package nem;



message EntityVersionTypeEntityConfig {  
    string entity_uuid = 1;
    string version_field_uuid = 2;
    bool append_only = 3;    
}
